feat: Loader — bellekte per-class efemer çözüp çalıştırma